force-app/main/default/objects/MPQuoteCondition__c/MPQuoteCondition__c.object-meta.xml
<CustomObject>
    <label>Condición de Presupuesto</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Condición de Presupuesto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condiciones de Presupuesto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>