force-app/main/default/objects/MPQuoteCondition__c/fields/MPApplyTimeScale__c.field-meta.xml
<CustomField>
    <fullName>MPApplyTimeScale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplica Escala de Tiempo</label>
    <type>Checkbox</type>
</CustomField>