force-app/main/default/objects/MPQuoteCondition__c/fields/MPApplyVolumeScale__c.field-meta.xml
<CustomField>
    <fullName>MPApplyVolumeScale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplica Escala de Volumen</label>
    <type>Checkbox</type>
</CustomField>