force-app/main/default/objects/MPQuoteCondition__c/fields/MPComertialApprovalValidation__c.field-meta.xml
<CustomField>
    <fullName>MPComertialApprovalValidation__c</fullName>
    <formula>IF(
  (
    MPNegotiatedAdjustment__c &lt;&gt;  MPSuggestedAdjustment__c || 
    (
      MPNegotiatedValue__c &lt;&gt;  MPSuggestedValue__c &amp;&amp;
      !BEGINS(MPConditionClass__r.MPExternalCode__c , &quot;AM&quot;)
    )||
    (
      MPValues__c &gt;= 0.2
    )
  ),
  &apos;Gerente Comercial&apos;,
  IF(
    (
      MPValues__c &gt;= 0.1 &amp;&amp;
      MPValues__c &lt; 0.2
    ),
    &apos;Subgerente Comercial&apos;,
    &apos;&apos;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ComertialApprovalValidation</label>
    <type>Text</type>
</CustomField>