force-app/main/default/objects/MPQuoteCondition__c/fields/MPConditionClassCode__c.field-meta.xml
<CustomField>
    <fullName>MPConditionClassCode__c</fullName>
    <formula>MPConditionClass__r.MPExternalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition Class Code</label>
    <type>Text</type>
</CustomField>