force-app/main/default/objects/MPQuoteCondition__c/fields/MPConditionClassURL__c.field-meta.xml
<CustomField>
    <fullName>MPConditionClassURL__c</fullName>
    <formula>HYPERLINK(Id ,  MPConditionClass__r.Name, &quot;_self&quot;)</formula>
    <label>Clase de Condición</label>
    <type>Text</type>
</CustomField>