force-app/main/default/objects/MPQuoteCondition__c/fields/MPContractAdjustment__c.field-meta.xml
<CustomField>
    <fullName>MPContractAdjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ajuste de Contrato</label>
    <referenceTo>MPAdjustment__c</referenceTo>
    <relationshipLabel>Condiciones de Presupuesto</relationshipLabel>
    <relationshipName>MPContratAdjustmentQuoteConditions</relationshipName>
    <type>Lookup</type>
</CustomField>