force-app/main/default/objects/MPQuoteCondition__c/fields/MPContractCalculationRule__c.field-meta.xml
<CustomField>
    <fullName>MPContractCalculationRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Norma de Cálculo de Contrato</label>
    <referenceTo>MPCalculationRule__c</referenceTo>
    <relationshipLabel>Condiciones de Presupuesto</relationshipLabel>
    <relationshipName>Condiciones_de_Presupuesto</relationshipName>
    <type>Lookup</type>
</CustomField>