force-app/main/default/objects/MPQuoteCondition__c/fields/MPContractCondition__c.field-meta.xml
<CustomField>
    <fullName>MPContractCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condición de Contrato</label>
    <referenceTo>MPContractCondition__c</referenceTo>
    <relationshipLabel>Condiciones de Presupuesto</relationshipLabel>
    <relationshipName>MPCCQuoteConditions</relationshipName>
    <type>Lookup</type>
</CustomField>