force-app/main/default/objects/MPQuoteCondition__c/fields/MPContractValue__c.field-meta.xml
<CustomField>
    <fullName>MPContractValue__c</fullName>
    <label>Valor de Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>