force-app/main/default/objects/MPQuoteCondition__c/fields/MPEntryProjectionValue__c.field-meta.xml
<CustomField>
    <fullName>MPEntryProjectionValue__c</fullName>
    <formula>IF(
OR(
MPConditionClassCode__c = &apos;AM15&apos;,
MPConditionClassCode__c = &apos;AM90&apos;
), 
IF(
NOT(ISNULL(MPWeightedValue__c)), 
MPWeightedValue__c,
MPNegotiatedValue__c
), 
null
)</formula>
    <label>Valor Proyeccion Entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>