force-app/main/default/objects/MPQuoteCondition__c/fields/MPHasScalesAssigned__c.field-meta.xml
<CustomField>
    <fullName>MPHasScalesAssigned__c</fullName>
    <description>Este Campo indica si contiene escalas asignadas</description>
    <formula>IF(MpTimeScales__c  &gt;= 1, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Escalas</label>
    <type>Checkbox</type>
</CustomField>