force-app/main/default/objects/MPQuoteCondition__c/fields/MPInApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>MPInApprovalProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En proceso de aprobación</label>
    <type>Checkbox</type>
</CustomField>