force-app/main/default/objects/MPQuoteCondition__c/fields/MPIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>MPIntegrationStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo Lookup hacia el registro en el objeto MPIntegrationStatus__c el cual muestra un Log de las integraciones</description>
    <label>Detalle de la integración</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Condiciones de Presupuesto</relationshipLabel>
    <relationshipName>MPQuoteCondition</relationshipName>
    <type>Lookup</type>
</CustomField>