force-app/main/default/objects/MPQuoteCondition__c/fields/MPIsModifiable__c.field-meta.xml
<CustomField>
    <fullName>MPIsModifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modificable?</label>
    <type>Checkbox</type>
</CustomField>