force-app/main/default/objects/MPQuoteCondition__c/fields/MPNegotiatedAdjustment__c.field-meta.xml
<CustomField>
    <fullName>MPNegotiatedAdjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ajuste Negociado</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.MPAdjustmentType__c</field>
            <operation>equals</operation>
            <value>Estratégico</value>
        </filterItems>
        <filterItems>
            <field>MPAdjustment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ajuste Estratégico</value>
        </filterItems>
        <filterItems>
            <field>$Source.MPAdjustmentType__c</field>
            <operation>equals</operation>
            <value>Por Inflación</value>
        </filterItems>
        <filterItems>
            <field>MPAdjustment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ajuste por Inflación</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPAdjustment__c</referenceTo>
    <relationshipLabel>Condiciones de Presupuesto</relationshipLabel>
    <relationshipName>MPAdjustmentQuoteConditions</relationshipName>
    <type>Lookup</type>
</CustomField>