force-app/main/default/objects/MPQuoteCondition__c/fields/MPNegotiatedCalculationRule__c.field-meta.xml
<CustomField>
    <fullName>MPNegotiatedCalculationRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Norma de Cálculo Negociada</label>
    <referenceTo>MPCalculationRule__c</referenceTo>
    <relationshipLabel>Condiciones de Presupuesto (Negotiation Calculation Rule)</relationshipLabel>
    <relationshipName>QuoteConditions2</relationshipName>
    <type>Lookup</type>
</CustomField>