force-app/main/default/objects/MPQuoteCondition__c/fields/MPNegotiatedValue__c.field-meta.xml
<CustomField>
    <fullName>MPNegotiatedValue__c</fullName>
    <label>Valor Negociado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>