force-app/main/default/objects/MPQuoteCondition__c/fields/MPPricingApiStatus__c.field-meta.xml
<CustomField>
    <fullName>MPPricingApiStatus__c</fullName>
    <description>Estado de la Integración de Precios.</description>
    <inlineHelpText>Estado de la Integración de Precios.</inlineHelpText>
    <label>Estado API Precios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPIntegrationStatusValues</valueSetName>
    </valueSet>
</CustomField>