force-app/main/default/objects/MPQuoteCondition__c/fields/MPQuote__c.field-meta.xml
<CustomField>
    <fullName>MPQuote__c</fullName>
    <label>Presupuesto</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>QuoteConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>