force-app/main/default/objects/MPQuoteCondition__c/fields/MPStartDate__c.field-meta.xml
<CustomField>
    <fullName>MPStartDate__c</fullName>
    <label>Fecha Inicio</label>
    <type>Date</type>
</CustomField>