force-app/main/default/objects/MPQuoteCondition__c/fields/MPSuggestedAdjustment__c.field-meta.xml
<CustomField>
    <fullName>MPSuggestedAdjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ajuste Sugerido</label>
    <referenceTo>MPAdjustment__c</referenceTo>
    <relationshipLabel>Condiciones de Presupuesto</relationshipLabel>
    <relationshipName>MPSuggestedAdjustmentQuoteConditions</relationshipName>
    <type>Lookup</type>
</CustomField>