force-app/main/default/objects/MPQuoteCondition__c/fields/MPSuggestedCalculationRule__c.field-meta.xml
<CustomField>
    <fullName>MPSuggestedCalculationRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Norma de Cálculo Sugerida</label>
    <referenceTo>MPCalculationRule__c</referenceTo>
    <relationshipLabel>Condiciones de Presupuesto (Suggested Calculation Rule)</relationshipLabel>
    <relationshipName>QuoteConditions</relationshipName>
    <type>Lookup</type>
</CustomField>