force-app/main/default/objects/MPQuoteCondition__c/fields/MPSuggestedValue__c.field-meta.xml
<CustomField>
    <fullName>MPSuggestedValue__c</fullName>
    <label>Valor Sugerido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>