force-app/main/default/objects/MPQuoteCondition__c/fields/MpTimeScales__c.field-meta.xml
<CustomField>
    <fullName>MpTimeScales__c</fullName>
    <label>Escalas Contador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>