force-app/main/default/objects/MPQuoteCondition__c/fields/MPValues__c.field-meta.xml
<CustomField>
    <fullName>MPValues__c</fullName>
    <description>Calcula el % de diferencia entre los campos valor sugerido y valor negociado cuando la clase de condición inicia con AM</description>
    <formula>IF( BEGINS( MPConditionClass__r.MPExternalCode__c , &quot;AM&quot;) ,  (MPSuggestedValue__c-MPNegotiatedValue__c)/100 , 0)</formula>
    <label>% Valores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>