force-app/main/default/objects/MPQuoteCondition__c/fields/MPWeightedValue__c.field-meta.xml
<CustomField>
    <fullName>MPWeightedValue__c</fullName>
    <label>Valor Ponderado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>