force-app/main/default/objects/MPQuoteCondition__c/validationRules/VRQCON_001_FechaInicioMenorContrato.validationRule-meta.xml
<ValidationRule>
    <fullName>VRQCON_001_FechaInicioMenorContrato</fullName>
    <active>true</active>
    <description>Impide que la Fecha de Inicio sea menor a la fecha del contrato vinculado al presupuesto.</description>
    <errorConditionFormula>MPStartDate__c  &lt;  MPQuote__r.Opportunity.MPContractStartDate__c</errorConditionFormula>
    <errorDisplayField>MPStartDate__c</errorDisplayField>
    <errorMessage>La Fecha de Inicio no puede ser inferior a la Fecha de Inicio del contrato. (VRQCON_001)</errorMessage>
</ValidationRule>