force-app/main/default/objects/MPQuoteCondition__c/validationRules/VRQCON_004_MPQuoteConditionModification.validationRule-meta.xml
<ValidationRule>
    <fullName>VRQCON_004_MPQuoteConditionModification</fullName>
    <active>true</active>
    <description>Regla de validación que impide modificar condiciones de presupuesto cuando la oportunidad no esté en etapa de &apos;Negociación&apos;.</description>
    <errorConditionFormula>AND(
OR(
MPQuote__r.Opportunity.RecordType.DeveloperName = &apos;MPEntry&apos;,
MPQuote__r.Opportunity.RecordType.DeveloperName = &apos;MPRenovation&apos;
),
NOT(ISNEW()),
NOT(
OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;Administrador del sistema&quot;
)
),
OR(
NOT($Permission.MPCreateEditQuoteConditions),
NOT(ISPICKVAL(MPQuote__r.Opportunity.StageName , &apos;Cotización&apos;))
)
)</errorConditionFormula>
    <errorMessage>Las clases de condición pueden ser modificadas únicamente por el Jefe Comercial mientras la oportunidad esté en etapa de Negociación. (VRQCON_004)</errorMessage>
</ValidationRule>